Fix layout in bookdescr (remove overflow, add media)

--- a/src/components/routes/BookDescrPage/bookDescrPage.module.scss
+++ b/src/components/routes/BookDescrPage/bookDescrPage.module.scss
@@ -25,6 +25,7 @@
     &__wrapper {
         display: flex;
         height: 100%;
+        height: 100vh;
 
         @media (max-width: 1000px) {
             flex-direction: column;
@@ -51,13 +52,17 @@
                 width: 40%;
                 height: 90%;
             }
+
+            @media (max-width: 600px) {
+                width: 50%;
+                height: 90%;
+            }
         }
     }
 
     &__text {
         flex: 0 1 55%;
         padding: 2% 4%;
-        overflow: hidden;
         flex: 0 1 60%;
         padding: 2%;
 
@@ -86,11 +91,8 @@
         }
 
         &_info {
-            padding: 2%;
-            border: 1px solid lightgrey;
             height: 45%;
             font-size: 22px;
-            font-weight: bold;
             font-size: 16px;
         }
     }
